force-app/main/default/objects/Timecards__c/Timecards__c.object-meta.xml
<CustomObject>
    <label>Timecards</label>
    <nameField>
        <displayFormat>TC-{0000}</displayFormat>
        <label>Timecards Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timecards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>