force-app/main/default/objects/Timecards__c/fields/Benefits_Value__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Value__c</fullName>
    <inlineHelpText>This is an auto calculated field.</inlineHelpText>
    <label>Benefits Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>