force-app/main/default/objects/Timecards__c/fields/Salary_Wage_Value__c.field-meta.xml
<CustomField>
    <fullName>Salary_Wage_Value__c</fullName>
    <label>Salary / Wage Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>