force-app/main/default/objects/Timecards__c/fields/Work_Items__c.field-meta.xml
<CustomField>
    <fullName>Work_Items__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Items</label>
    <referenceTo>Grant_Work_Items__c</referenceTo>
    <relationshipLabel>Timecards</relationshipLabel>
    <relationshipName>Timecards</relationshipName>
    <type>Lookup</type>
</CustomField>